--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="finchington.github.io/styles.css">
+    <link rel="stylesheet" href="https://finchington.github.io/styles.css">
   </head>
   <body>
   <h1>The Finchy Omnibus</h1>
