--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
   </head>
   <body>
   <h1>The Finchy Omnibus</h1>
