--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <link type="text/css" rel="stylesheet" href="https://finchington.github.io/main/styles.css">
+   <link type="text/css" rel="stylesheet" href="main/styles.css">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
