--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+     <style>
+   <link type="text/css" rel="stylesheet" href="styles.css">
+   </style>
   <h1>The Finchy Omnibus</h1>
   <h2>WARNING</h2>
   <p>The writings beyond this page contain material unsuitable for younger audiences. People under the age of 18, and those who aren't down for adult content, are encouraged to run screaming into the night.</p>
