Making everything centered

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+  <p class=center>Welcome to...</p>
   <h1>The Finchy Omnibus</h1>
-  <h2>WARNING</h2>
-  <p>The writings beyond this page contain material unsuitable for younger audiences. People under the age of 18, and those who aren't down for adult content, are encouraged to run screaming into the night.</p>
-    <a href="https://zombo.com">AAAAAAAAHHHHH!</a>
-    <a href="">Nah, fam. I'm good. Lemme in.</a>
+  <h2 class=center>WARNING</h2>
+  <p class=center>The writings beyond this page contain material unsuitable for younger audiences. People under the age of 18, and those who aren't down for adult content, are encouraged to run screaming into the night.</p>
+    <p class=center><a href="https://zombo.com">AAAAAAAAHHHHH!</a></p>
+    <p class=center><a href="">Nah, fam. I'm good. Lemme in.</a></p>
   </body>
 </html>
