Do I need to https?

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <h2 class=center>WARNING</h2>
   <p class=center>The writings beyond this page contain material unsuitable for younger audiences. People under the age of 18, and those who aren't down for adult content, are encouraged to run screaming into the night.</p>
     <p class=center><a href="https://zombo.com">AAAAAAAAHHHHH!</a></p>
-    <p class=center><a href="finchington.github.io/landingpage.html">Nah, fam. I'm good. Lemme in.</a></p>
+    <p class=center><a href="https://finchington.github.com/landing-page.html">Nah, fam. I'm good. Lemme in.</a></p>
   </body>
 </html>
