Making the start of a navigation bar.

--- a/landing-page.html
+++ b/landing-page.html
@@ -7,6 +7,12 @@
   </head>
   <header>
     <h1>The Finchy Omnibus</h1>
-    <p>Home</p> <p>Genres</p> <p>Relationships</p> <p>Fanfics</p> <p>Shameless Plugs</p>
+    <div class="topnav">
+      <a href="">Home</a>
+      <a href="">Genres</a>
+      <a href="">Relationships</a>
+      <a href="">Fanfics</a>
+      <a href="">Shameless Plugs</a>
+    </div>
   </header>
 </html>
