Does making a list help?

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,11 +8,13 @@
   <header>
     <h1>The Finchy Omnibus</h1>
     <div class="topnav">
-      <a href="">Home</a>
-      <a href="">Genres</a>
-      <a href="">Relationships</a>
-      <a href="">Fanfics</a>
-      <a href="">Shameless Plugs</a>
+      <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">Genres</a></li>
+      <li><a href="">Relationships</a></li>
+      <li><a href="">Fanfics</a></li>
+      <li><a href="">Shameless Plugs</a></li>
+      </ul>  
     </div>
   </header>
 </html>
