just digging the hole deepr

--- a/landing-page.html
+++ b/landing-page.html
@@ -9,11 +9,11 @@
     <h1>The Finchy Omnibus</h1>
     <div class="topnav">
       <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">Genres</a></li>
-      <li><a href="">Relationships</a></li>
-      <li><a href="">Fanfics</a></li>
-      <li><a href="">Shameless Plugs</a></li>
+      <li class="topnav"><a href="">Home</a></li>
+      <li class="topnav"><a href="">Genres</a></li>
+      <li class="topnav"><a href="">Relationships</a></li>
+      <li class="topnav"><a href="">Fanfics</a></li>
+      <li class="topnav"><a href="">Shameless Plugs</a></li>
       </ul>  
     </div>
   </header>
