undoing my horrible mistakes

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,13 +8,11 @@
   <header>
     <h1>The Finchy Omnibus</h1>
     <div class="topnav">
-      <ul>
-      <li class="topnav"><a href="">Home</a></li>
-      <li class="topnav"><a href="">Genres</a></li>
-      <li class="topnav"><a href="">Relationships</a></li>
-      <li class="topnav"><a href="">Fanfics</a></li>
-      <li class="topnav"><a href="">Shameless Plugs</a></li>
-      </ul>  
+      <a href="">Home</a>
+      <a href="">Genres</a>
+      <a href="">Relationships</a>
+      <a href="">Fanfics</a>
+      <a href="">Shameless Plugs</a> 
     </div>
   </header>
 </html>
