adding a link in the hopes that changes something

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,7 +8,7 @@
   <header>
     <h1>The Finchy Omnibus</h1>
     <div class="topnav">
-      <a class="active" href="">Home</a>
+      <a class="active" href="https://finchington.github.io/landing-page.html">Home</a>
       <a href="">Genres</a>
       <a href="">Relationships</a>
       <a href="">Fanfics</a>
