--- a/landing-page.html
+++ b/landing-page.html
@@ -7,12 +7,24 @@
   </head>
   <header>
     <h1>The Finchy Omnibus</h1>
-    <div class="topnav">
-      <a class="active" href="https://finchington.github.io/landing-page.html">Home</a>
-      <a href="">Genres</a>
-      <a href="">Relationships</a>
-      <a href="">Fanfics</a>
-      <a href="">Shameless Plugs</a> 
-    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://finchington.github.io/index/html">Home</a>
+        </li>
+        <li>
+          <a href="#">Genres</a>
+        </li>
+        <li>
+          <a href="#">Relationships</a>
+        </li>
+        <li>
+          <a href="#">Fanfiction</a>
+        </li>
+        <li>
+          <a href="#">Shameless Plugs</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 </html>
