--- a/landing-page.html
+++ b/landing-page.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+  <body>
   <header>
     <h1>The Finchy Omnibus</h1>
     <nav>
@@ -27,4 +28,5 @@
       </ul>
     </nav>
   </header>
+  </body>
 </html>
