--- a/landing-page.html
+++ b/landing-page.html
@@ -9,7 +9,7 @@
   <header>
     <h1>The Finchy Omnibus</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li>
           <a href="https://finchington.github.io/index/html">Home</a>
         </li>
