--- a/landing-page.html
+++ b/landing-page.html
@@ -9,6 +9,7 @@
   <header>
     <h1>The Finchy Omnibus</h1>
     <nav>
+      <div>
       <ul class="nav">
         <li>
           <a href="https://finchington.github.io/index/html">Home</a>
@@ -26,6 +27,7 @@
           <a href="#">Shameless Plugs</a>
         </li>
       </ul>
+      </div>
     </nav>
   </header>
   </body>
