--- a/landing-page.html
+++ b/landing-page.html
@@ -8,7 +8,7 @@
   <body>
   <header>
     <h1>The Finchy Omnibus</h1>
-      <ul>
+      <ul class="nav">
         <li>
           <a href="https://finchington.github.io/index/html">Home</a>
         </li>
