watch me break this shit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en">
   <head>
      <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+  <div class="page"
   <p class=center>Welcome to...</p>
   <h1>The Finchy Omnibus</h1>
   <h2 class=center>WARNING</h2>
@@ -13,4 +14,5 @@
     <p class=center><a href="https://zombo.com">AAAAAAAAHHHHH!</a></p>
     <p class=center><a href="https://finchington.github.io/landing-page.html">Nah, fam. I'm good. Lemme in.</a></p>
   </body>
+</div>
 </html>
