--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  <div class="page"
+  <div class="page">
   <p class=center>Welcome to...</p>
   <h1>The Finchy Omnibus</h1>
   <h2 class=center>WARNING</h2>
