--- a/landing-page.html
+++ b/landing-page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <div class="page">
   <header>
     <h1>The Finchy Omnibus</h1>
       <ul class="nav">
@@ -26,5 +27,6 @@
         </li>
       </ul>
   </header>
+    </div>
   </body>
 </html>
