just having fun

--- a/landing-page.html
+++ b/landing-page.html
@@ -27,6 +27,7 @@
         </li>
       </ul>
   </header>
+      <p>Hello, and welcome to my horrible web page. Nothing works like I want it to and consistently failing to make it happen is slowly driving me insane. You shouldn't even be looking at this, yet.</p>
     </div>
   </body>
 </html>
