Stretch the page a bit with a footer

--- a/landing-page.html
+++ b/landing-page.html
@@ -28,6 +28,11 @@
       </ul>
   </header>
       <p>Hello, and welcome to my horrible web page. Nothing works like I want it to and consistently failing to make it happen is slowly driving me insane. You shouldn't even be looking at this, yet.</p>
+    <footer>
+      <h3>Finchy Omnibus</h3>
+      <p>Copyright 2024</p>
+      <h2>Current Word Count:</h2>
+    </footer>
     </div>
   </body>
 </html>
