--- a/landing-page.html
+++ b/landing-page.html
@@ -31,7 +31,7 @@
     <footer>
       <h3>Finchy Omnibus</h3>
       <p>Copyright 2024</p>
-      <h2>Current Word Count:</h2>
+      <h2>Current Word Count: 5521</h2>
     </footer>
     </div>
   </body>
