--- a/overtime.html
+++ b/overtime.html
@@ -7,6 +7,7 @@
   </head>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <header>
+    <div class="page">
     <h1>Overtime</h1>
         <div class="infobox">
             <input type="checkbox" id="menu">
@@ -18,6 +19,7 @@
               <p>Setting: Draconic Solutions</p>
             </div>
         </div>
+    </div>
   </header>
   <body>
   <div class="page">
