--- a/landing-page.html
+++ b/landing-page.html
@@ -28,6 +28,10 @@
       </ul>
   </header>
       <p>Hello, and welcome to my horrible web page. Nothing works like I want it to and consistently failing to make it happen is slowly driving me insane. You shouldn't even be looking at this, yet.</p>
+      <hr>
+      <h3><u>NEWS</u></h3>
+      <h4>7/9/24:</h4>
+      <p>You found my website long before it was ready. Good for you. Right now I'm trying to port my short stories over to their own pages. <a href="https://finchington.github.io/content/modern/overtime.html">Overtime</a> already exists here, as does <a href="https://finchington.github.io/content/fantasy/rolandwitch.html">this little story</a> about a knight and a witch. We're working on it.</p>
     <footer>
       <h3>Finchy Omnibus</h3>
       <p>Copyright 2024</p>
