--- a/content/modern/overtime.html
+++ b/content/modern/overtime.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Overtime, a Short Story by Finch</title>
   </head>
   <link rel="stylesheet" type="text/css" href="modernstyle.css">
   <body>
