background must be grey

--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <div class="page">
   <p>The hard stone beneath him was uninviting, but that was not what caused the first embers of concern to smolder in Roland's mind. Rather, the feeling against his back and shoulders was not the same as the feeling he remembered, when he had first settled down to sleep. As the horse started to move his arms, feeling the resistance as something held him down, the embers stirred into flame. His eyes snapped open, as he wheeled his head left and right, to where his arms lay affixed to the rock. He strained his muscled arms with a heavy groan, but still they lay spread out, though he could see nothing that bound him down.</p>
   
   <p>"Do remain still," said a voice, from the shadows, melodious and lightly accented. "While I have every faith in the strength of my enchantments, I would just as soon spare you the trouble of seeing what I have planned, should they fail."</p>
@@ -544,6 +545,7 @@ The next few minutes were a flurry of activity. Getting dressed, he passed the m
 
 
 Which meant, if he did his work quickly, he may have a few days before needing to face the King, properly.
+    </div>
   </body>
 </html>
 
