code fix and more paragraphs

--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -71,14 +71,11 @@
 
     <p>"...stop..."</p>
 
+    <p>"...right there, thief!"</p>
 
-"...right there, thief!"
+    <p>Roland prepared to draw his sword, taking one last stomping step on the cobblestones as he came to a stop. The masonry walls of two buildings stretched up on either side of him, with a third creating a dead end ahead. At the end of this alley, a lithe and wiry mouse in a hood made a noise of impatience, as the seriousness of his situation began to sink in.</p>
 
-
-Roland prepared to draw his sword, taking one last stomping step on the cobblestones as he came to a stop. The masonry walls of two buildings stretched up on either side of him, with a third creating a dead end ahead. At the end of this alley, a lithe and wiry mouse in a hood made a noise of impatience, as the seriousness of his situation began to sink in.
-
-
-"Guess I don't know the city as well as I oughta," the mouse drawled. "Could've sworn on me mum that they hadn't've put a buldin' here."
+    <p>"Guess I don't know the city as well as I oughta," the mouse drawled. "Could've sworn that they hadn't put a buldin' here."</p>
 
 
 "The game is over," Roland barked back, unheeding. "Surrender what you've stolen and prepare to be taken into custody."
@@ -545,9 +542,9 @@ The next few minutes were a flurry of activity. Getting dressed, he passed the m
 
 
 Which meant, if he did his work quickly, he may have a few days before needing to face the King, properly.
-    </div>
-  </body>
-</html>
 
 
 With his things gathered, he mounted his Drake and flicked the reins. The creature began a loping gallop at top speed, cutting through the countryside as he guided the knight back to Torenwald, back to the castle where his King resided. However, most importantly, he also traveled where his Queen kept her chambers.
+    </div>
+  </body>
+</html>
