--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -77,26 +77,20 @@
 
     <p>"Guess I don't know the city as well as I oughta," the mouse drawled. "Could've sworn that they hadn't put a buldin' here."</p>
 
+    <p>"The game is over," Roland barked back, unheeding. "Surrender what you've stolen and prepare to be taken into custody."</p>
 
-"The game is over," Roland barked back, unheeding. "Surrender what you've stolen and prepare to be taken into custody."
+    <p>"I've got... whaddya fancy educated types call it? I've got a counter-proposal." Calmly, the mouse reached into a pocket of his cloak, producing a glittering green gem. "I'll hand ya back what I took from the Queen, easy as y'like. You can tell them I frew it out, while you was chasin' me, and I got away."</p>
 
+    <p>"You would ask me to cover your escape?" Roland chuckled. "Your desperation is palpable, thief."</p>
 
-"I've got... whaddya fancy educated types call it? I've got a countah-proposal." Calmly, the mouse reached into a pocket of his cloak, producing a glittering green gem. "I'll hand ya back what I took from the Queen, easy as y'like. You can tell them I frew it out, while you was chasin' me, and I got away."
+    <p>"Dunno about palpable, but I ain't keen on spending another night in the gaoler's company. Luckily, I've got a fing or two I think can make it worth m'lord's while."</p>
 
+    <p>"Enough! There is nothing you could possibly offer that would... would... what are you doing?"</p>
 
-"You would ask me to cover your escape?" Roland chuckled. "Your desperation is palpable, thief."
-
-
-"Dunno about palpable, but I ain't keen on spending another night in the gaoler's company. Luckily, I've got a fing or two I think can make it worth m'lord's while."
-
-
-"Enough! There is nothing you could possibly offer that would... would... what are you doing?"
+    <p>As Roland protested, the mouse turned to face away from the knight, dropping the gem on the ground as he leaned forward. One hand braced against the wall, while the other tossed the back of his cloak to one side and, in the very next motion, slid his pants down. Soon, Roland was staring at the grey fur of the thief's round, athletic cheeks, the underside of his small, fluffy balls. The thief pulled on one of his asscheeks, giving Roland a clear view of the pink ring that lay underneath the mouse's rope-like tail.</p>
 
 
-As Roland protested, the mouse turned to face away from the knight, dropping the gem on the ground as he leaned forward. One hand braced against the wall, while the other tossed the back of his cloak to one side and, in the very next motion, slid his pants down. Soon, Roland was staring at the grey fur of the thief's round, athletic cheeks, the underside of his small, fluffy balls. The thief pulled on one of his asscheeks, giving Roland a clear view of the pink ring that lay underneath the mouse's rope-like tail.
-
-
-"What do you think, m'lord?" said the thief, with a husky sensuality that bordered on taunting. "Tighter'n a maiden, and far more inviting. That's how the lads in the Guard've described me, when I gave'em a similar deal."
+"What do you fink, m'lord?" said the thief, with a husky sensuality that bordered on taunting. "Tighter'n a maiden, and far more inviting. That's how the lads in the Guard've described me, when I gave'em a similar deal."
 
 
 Roland sputtered, scandalized and bemused.
