one step at a time

--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -89,17 +89,13 @@
 
     <p>As Roland protested, the mouse turned to face away from the knight, dropping the gem on the ground as he leaned forward. One hand braced against the wall, while the other tossed the back of his cloak to one side and, in the very next motion, slid his pants down. Soon, Roland was staring at the grey fur of the thief's round, athletic cheeks, the underside of his small, fluffy balls. The thief pulled on one of his asscheeks, giving Roland a clear view of the pink ring that lay underneath the mouse's rope-like tail.</p>
 
+    <p>"What do you fink, m'lord?" said the thief, with a husky sensuality that bordered on taunting. "Tighter'n a maiden, and far more inviting. That's how the lads in the Guard've described me, when I gave'em a similar deal."</p>
 
-"What do you fink, m'lord?" said the thief, with a husky sensuality that bordered on taunting. "Tighter'n a maiden, and far more inviting. That's how the lads in the Guard've described me, when I gave'em a similar deal."
+    <p>Roland sputtered, scandalized and bemused.</p>
 
+    <p>"Come on, now, Sir Knight. No need to be shy. I know all that pining after fair maidens and dragon-slaying business is as lonely as any other." The thief grinned, his eyes full of bitter conspiracy. "You can trust me to keep this between us. Who'd believe a thief, eh?"</p>
 
-Roland sputtered, scandalized and bemused.
-
-
-"Come on, now, Sir Knight. No need to be shy. I know all that pining after fair maidens and dragon-slaying business is as lonely as any other." The thief grinned, his eyes full of bitter conspiracy. "You can trust me to keep this between us. Who'd believe a thief, eh?"
-
-
-Roland's mouth worked, uselessly. His mind raced, as he became more and more aware of a lingering weight on his mind. Something was wrong. Something was deeply, deeply wrong.
+    <p>Roland's mouth worked, uselessly. His mind raced, as he became more and more aware of a lingering weight on his mind. Something was wrong. Something was deeply, deeply wrong.</p>
 
 
 And then, he remembered.
