This is totally fun

--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -97,44 +97,31 @@
 
     <p>Roland's mouth worked, uselessly. His mind raced, as he became more and more aware of a lingering weight on his mind. Something was wrong. Something was deeply, deeply wrong.</p>
 
+    <p>And then, he remembered.</p>
 
-And then, he remembered.
+    <p>"Ciupani!"</p>
 
+    <p>The alley disappeared. Roland felt a sense of vertigo as he had to suddenly account for being back on his back, bound by hand and foot, in the middle of a dark, torch-lit cave.</p>
 
-"Ciupani!"
+    <p>The fox above him sighed, in chagrin. "A pity. One of these days, I will find a knight who goes for the cornered thief tale."</p>
 
+    <p>Roland snarled at the witch. "Your enchantments hold no power over me. I will not submit to your heinous carnal desires, no matter how you choose to paint them."</p>
 
-The alley disappeared. Roland felt a sense of vertigo as he had to suddenly account for being back on his back, bound by hand and foot, in the middle of a dark, torch-lit cave.
+    <p>Those words seemed to make Ciupani pause and think. "You know, I am inclined to believe you. It seems you are a rarity, among men." She began to work on something, at her table. Roland strained against his bonds as the witch continued to speak. "The question becomes thus: are you one of those men who harbor no true desire, or is your unwillingness due to something else? If it is the former, then that is quite inconvenient." Roland had managed to get his wrists a millimeter off the slab, by the time Cuipani returned with a bowl of something that steamed slightly. "I could always merely claim your essence directly, but such things are even more distasteful than murder. Luckily, if it is the latter, we have ways of determining it."</p>
 
+    <p>Roland puffed with exertion, but was unable to move as Ciupani loomed over him. Placing a thumb in her bowl, she pulled up a film of pink, viscous dye, which she proceeded to press against the knight's forehead. A sudden pressure against his throat bound him, preventing him from pulling away. The substance reeked of sweat and... no, not of sweat. He gritted his teeth, his face curled hatefully as he pulled against his invisible bonds.</p>
 
-The fox above him sighed, in chagrin. "A pity. One of these days, I will find a knight who goes for the cornered thief tale."
+    <p>"There," the witch said, uncaring. "With this, we should be able to turn the ritual inward. Perhaps Sir Roland will appreciate being able to dictate the story to me, instead of the other way around."</p>
 
+    <p>Roland screamed back at Ciupani, inarticulately, as defiance gave way to frustration. His hands slammed back down on the stone, his breath coming in ragged heaves. The circle of ink on his forehead nearly burned, filling his nostrils with that same horrid smell. "E-enough of this," he said, at length. "Kill me, release me, whatever you must, but cease this farce. I have nothing to give to a witch, such as you."</p>
 
-Roland snarled at the witch. "Your enchantments hold no power over me. I will not submit to your heinous carnal desires, no matter how you choose to paint them."
+    <p>"Are you certain of that?" Ciupani placed her thumb and two more of her fingers in the bowl, stirring its contents idly. "I may not know your heart. You may not even know it, yourself. My patron, however, is well-versed in the hidden desires of all beasts. Should anything be able to sniff them out, it would be it."</p>
 
+    <p>"You..." Roland tried to struggle again, but he couldn't. The smell was becoming cloying, a bitter sweetness mixing with the smell of desperation. Feebly, he protested. "...you waste your time. Every foul magic you spend on me is one the executioner won't have to contend with. You are signing your own warrant."</p>
 
-She seemed to think, at that. "You know, I am inclined to believe you. It seems you are a rarity, among men." She began to work on something, at her table. Roland strained against his bonds as the witch continued to speak. "The question becomes thus: are you one of those men who harbor no true desire, or is your unwillingness due to something else? If it is the former, then that is quite inconvenient." Roland had managed to get his wrists a millimeter off the slab, by the time Cuipani returned with a bowl of something that steamed slightly. "I could always merely claim your essence directly, but such things are even more distasteful than murder. Luckily, if it is the latter, we have ways of determining it."
+    <p>"You focus too much on me, Sir Knight." Ciupani made to straddle the prone knight's hips, bringing her fingers up to draw lines against his snout. Her eyes shown with pale pink light. "Turn your thoughts inward."</p>
 
-
-Roland puffed with exertion, but was unable to move as Ciupani loomed over him. Placing a thumb in her bowl, she pulled up a film of pink, viscous dye, which she proceeded to press against the knight's forehead. A sudden pressure against his throat bound him, preventing him from pulling away. The substance reeked of sweat and... no, not of sweat. He gritted his teeth, his face curled hatefully as he pulled against his invisible bonds.
-
-
-"There," the witch said, uncaring. "With this, we should be able to turn the ritual inward. Perhaps Sir Roland will appreciate being able to dictate the story to me, instead of the other way around."
-
-
-Roland screamed back at Ciupani, inarticulately, as defiance gave way to frustration. His hands slammed back down on the stone, his breath coming in ragged heaves. The circle of ink on his forehead nearly burned, filling his nostrils with that same horrid smell. "E-enough of this," he said, at length. "Kill me, release me, whatever you must, but cease this farce. I have nothing to give to a witch, such as you."
-
-
-"Are you certain of that?" Ciupani placed her thumb and two more of her fingers in the bowl, stirring its contents idly. "I may not know your heart. You may not even know it, yourself. My patron, however, is well-versed in the hidden desires of all beasts. Should anything be able to sniff them out, it would be it."
-
-
-"You..." Roland tried to struggle again, but he couldn't. The smell was becoming cloying, a bitter sweetness mixing with the smell of desperation. Feebly, he protested. "...you waste your time. Every foul magic you spend on me is one the executioner won't have to contend with. You are signing your own warrant."
-
-
-"You focus too much on me, Sir Knight." Ciupani made to straddle the prone knight's hips, bringing her fingers up to draw lines against his snout. Her eyes shown with pale pink light. "Turn your thoughts inward."
-
-
-"No..."
+    <p>"No..."</p>
 
 
 "Think deeply, Sir Roland. Think back to what you desire most, in the world."
