--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -385,7 +385,7 @@
 
     <p>Sincerely,</p>
 
-    <p>Sir Roland.</em></div>
+    <p>Sir Roland.</em></p>
 
   <p>The next few minutes were a flurry of activity. Getting dressed, he passed the message off to the innkeeper, with strict instructions to have it sent by courier to the castle. Then, he went to the stables to saddle up his Drake, stopping only for a moment to request a new traveling cloak from one of the townsfolk, who offered it eagerly. By his calculations, a courier on foot would get the message to his master within a week or two.</p>
 
