Fancy pants heading thing

--- a/content/fantasy/rolandwitch.html
+++ b/content/fantasy/rolandwitch.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+     <header>
+    <div class="page">
+    <h1>Roland and the Witch</h1>
+        <div class="infobox">
+            <input type="checkbox" id="menu">
+            <label for="menu">Info</label>
+            <div class="menu-content">
+              <p>Words: 5,521</p>
+              <p>Male/Female</p>
+              <p>Fantasy</p>
+              <p>Setting: Lorelan</p>
+            </div>
+        </div>
+    </div>
+  </header>
     <div class="page">
   <p>The hard stone beneath him was uninviting, but that was not what caused the first embers of concern to smolder in Roland's mind. Rather, the feeling against his back and shoulders was not the same as the feeling he remembered, when he had first settled down to sleep. As the horse started to move his arms, feeling the resistance as something held him down, the embers stirred into flame. His eyes snapped open, as he wheeled his head left and right, to where his arms lay affixed to the rock. He strained his muscled arms with a heavy groan, but still they lay spread out, though he could see nothing that bound him down.</p>
   
